deploy/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: topolvm-system
  labels:
    app.kubernetes.io/name: topolvm-system
    topolvm.cybozu.com/webhook: ignore
