deploy/manifests/csi-node.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: topolvm-system
  name: csi-topolvm-node
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: csi-topolvm-node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: csi-topolvm-node
    spec:
      serviceAccountName: csi-topolvm-node
      containers:
        - name: node
          image: quay.io/cybozu/topolvm:0.1.1
          securityContext:
            privileged: true
          command:
            - /csi-topolvm
            - node
            - --node-name=$(MY_NODE_NAME)
            - --csi-socket-name=/run/topolvm/csi-topolvm.sock
            - --lvmd-socket-name=/run/lvmd/lvmd.sock
          volumeMounts:
            - name: node-plugin-dir
              mountPath: /run/topolvm
            - name: lvmd-socket-dir
              mountPath: /run/lvmd
            - name: pod-volumes-dir
              mountPath: /var/lib/kubelet/pods
              mountPropagation: "Bidirectional"
            - name: csi-plugin-dir
              mountPath: /var/lib/kubelet/plugins/kubernetes.io/csi
              mountPropagation: "Bidirectional"

        - name: csi-registrar
          image: quay.io/cybozu/topolvm:0.1.1
          command:
            - /csi-node-driver-registrar
            - "--csi-address=/run/topolvm/csi-topolvm.sock"
            - "--kubelet-registration-path=/var/lib/kubelet/plugins/topolvm.cybozu.com/node/csi-topolvm.sock"
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "rm -rf /registration/topolvm.cybozu.com /registration/topolvm.cybozu.com-reg.sock"]
          volumeMounts:
            - name: node-plugin-dir
              mountPath: /run/topolvm
            - name: registration-dir
              mountPath: /registration

        - name: topolvm-node
          image: quay.io/cybozu/topolvm:0.1.1
          command:
            - /topolvm-node
            - --node-name=$(MY_NODE_NAME)
            - --lvmd-socket=/run/lvmd/lvmd.sock
          volumeMounts:
            - name: lvmd-socket-dir
              mountPath: /run/lvmd

        - name: lvmetrics
          image: quay.io/cybozu/topolvm:0.1.1
          command:
            - /lvmetrics
            - --socket=/run/topolvm/lvmd.sock
          volumeMounts:
          - name: lvmd-socket-dir
            mountPath: /run/topolvm

      volumes:
        - name: registration-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: Directory
        - name: node-plugin-dir
          hostPath:
            path: /var/lib/kubelet/plugins/topolvm.cybozu.com/node
            type: DirectoryOrCreate
        - name: csi-plugin-dir
          hostPath:
            path: /var/lib/kubelet/plugins/kubernetes.io/csi
            type: DirectoryOrCreate
        - name: pod-volumes-dir
          hostPath:
            path: /var/lib/kubelet/pods/
            type: DirectoryOrCreate
        - name: lvmd-socket-dir
          hostPath:
            path: /run/topolvm
            type: Directory
