deploy/manifests/controller.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: controller
  namespace: topolvm-system
spec:
  selector:
    app.kubernetes.io/name: controller
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  namespace: topolvm-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: controller
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - controller
            topologyKey: "kubernetes.io/hostname"
      securityContext:
        runAsUser:  10000
        runAsGroup: 10000
      serviceAccountName: controller
      containers:
        - name: topolvm-controller
          image: quay.io/cybozu/topolvm:0.4.2
          command:
            - /topolvm-controller
            - --cert-dir=/certs
          ports:
            - containerPort: 9808
              name: healthz
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /metrics
              port: 8080
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
            failureThreshold: 3
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 60
          volumeMounts:
            - name: socket-dir
              mountPath: /run/topolvm
            - name: certs
              mountPath: /certs

        - name: csi-provisioner
          image: quay.io/cybozu/topolvm:0.4.2
          command:
            - /csi-provisioner
            - "--csi-address=/run/topolvm/csi-topolvm.sock"
            - "--feature-gates=Topology=true"
            - --enable-leader-election
            - --leader-election-namespace=topolvm-system
            - --leader-election-type=leases
          volumeMounts:
            - name: socket-dir
              mountPath: /run/topolvm

        - name: csi-attacher
          image: quay.io/cybozu/topolvm:0.4.2
          command:
            - /csi-attacher
            - "--csi-address=/run/topolvm/csi-topolvm.sock"
            - --leader-election
            - --leader-election-namespace=topolvm-system
          volumeMounts:
            - name: socket-dir
              mountPath: /run/topolvm

        - name: csi-resizer
          image: quay.io/cybozu/topolvm:0.4.2
          command:
            - /csi-resizer
            - "--csi-address=/run/topolvm/csi-topolvm.sock"
            - --leader-election
            - --leader-election-namespace=topolvm-system
          volumeMounts:
            - name: socket-dir
              mountPath: /run/topolvm

        - name: liveness-probe
          image: quay.io/cybozu/topolvm:0.4.2
          command:
            - /livenessprobe
            - "--csi-address=/run/topolvm/csi-topolvm.sock"
          volumeMounts:
            - name: socket-dir
              mountPath: /run/topolvm

      volumes:
        - name: socket-dir
          emptyDir: {}
        - name: certs
          secret:
            secretName: mutatingwebhook
