deploy/manifests/csi-controller.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: csi-topolvm-controller
  namespace: topolvm-system
spec:
  selector:
    app.kubernetes.io/name: csi-topolvm-controller
  ports:
    - name: dummy
      port: 12345
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: csi-topolvm-controller
  namespace: topolvm-system
spec:
  serviceName: csi-topolvm-controller
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: csi-topolvm-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: csi-topolvm-controller
    spec:
      securityContext:
        runAsUser:  10000
        runAsGroup: 10000
      serviceAccountName: csi-topolvm-controller
      containers:
        - name: controller
          image: quay.io/cybozu/topolvm:0.1.2
          command:
            - /csi-topolvm
            - controller
            - --csi-socket-name=/run/topolvm/csi-topolvm.sock
          volumeMounts:
            - name: socket-dir
              mountPath: /run/topolvm

        - name: csi-provisioner
          image: quay.io/cybozu/topolvm:0.1.2
          command:
            - /csi-provisioner
            - "--csi-address=/run/topolvm/csi-topolvm.sock"
            - "--feature-gates=Topology=true"
          volumeMounts:
            - name: socket-dir
              mountPath: /run/topolvm

        - name: csi-attacher
          image: quay.io/cybozu/topolvm:0.1.2
          command:
            - /csi-attacher
            - "--csi-address=/run/topolvm/csi-topolvm.sock"
          volumeMounts:
            - name: socket-dir
              mountPath: /run/topolvm

      volumes:
        - name: socket-dir
          emptyDir: {}
